# lbm-rpca-dmd_reissued

./: .gitignore  README.md
configs/: baseline_phase5_example.json  benchmark_phase6_example.json  benchmark_phase6_smoke.json  lbm_cylinder_base.cfg  lbm_cylinder_base.json  lbm_cylinder_clean_example.json  visual_results_phase7_example.json  visual_results_phase7_smoke.json
cpp/lbm_core/: CMakeLists.txt
cpp/lbm_core/include/lbm/: config.hpp  io.hpp  solver.hpp
cpp/lbm_core/src/: config.cpp  io.cpp  main.cpp  solver.cpp
docs/: phase0_only_plan.md  phase0_phase1_architecture.md  phase1_solver_assumptions_limits_risks.md  phase2_clean_dataset_spec.md  phase3_noisy_dataset_spec.md  phase4_model_data_contract.md  phase5_baseline_models.md  phase6_benchmark_runner.md  phase7_visual_results_pipeline.md
python/scripts/: generate_clean_dataset_example.py  generate_noisy_dataset_example.py  inspect_baseline_reconstruction.py  inspect_clean_run.py  inspect_noisy_run.py  run_baseline_example.py  run_benchmark_example.py  run_local_pipeline.py  run_phase1_example.py  run_test_pipeline.py  run_visual_results_example.py  validate_clean_dataset.py  validate_noisy_dataset.py  visualize_noisy_comparison.py  visualize_phase1_snapshot.py
python/src/fluid_denoise/: __init__.py  phase1_runtime.py  (+11 more)
tests/: test_phase1_runtime.py  test_phase1_smoke.py  test_phase1_validation.py  test_phase2_clean_dataset.py  test_phase3_noisy_dataset.py  test_phase4_model_data.py  test_phase5_baselines.py  test_phase6_benchmark.py  test_phase7_visual_results.py  test_pipeline_runner.py
